Kép fájlnevek javítva

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </nav>
     <main>
         <div class="kepek">
-            <img src="Spártaiak/_DSC6696_300.jpg" alt="">
-            <img src="Spártaiak/_DSC8090_300.jpg" alt="">
-            <img src="Spártaiak/_DSC8235_300.jpg" alt="">
-            <img src="Spártaiak/_DSC9920_300.jpg" alt="">
-            <img src="Spártaiak/_MG_1121_1_300.jpg" alt="">
-            <img src="Spártaiak/_MG_1357_300.jpg" alt="">
-            <img src="Spártaiak/_MG_1420_2_300.jpg" alt="">
-            <img src="Spártaiak/_MG_2995_300.jpg" alt="">
+            <img src="Spártaiak/DSC6696_300.jpg" alt="">
+            <img src="Spártaiak/DSC8090_300.jpg" alt="">
+            <img src="Spártaiak/DSC8235_300.jpg" alt="">
+            <img src="Spártaiak/DSC9920_300.jpg" alt="">
+            <img src="Spártaiak/MG_1121_1_300.jpg" alt="">
+            <img src="Spártaiak/MG_1357_300.jpg" alt="">
+            <img src="Spártaiak/MG_1420_2_300.jpg" alt="">
+            <img src="Spártaiak/MG_2995_300.jpg" alt="">
         </div>
     </main>
     
