--- a/nagykep.html
+++ b/nagykep.html
@@ -18,14 +18,14 @@
     </nav>
     <main>
         <div class="kepek">
-            <img src="_DSC6696.jpg" alt="">
-            <img src="_DSC8090.jpg" alt="">
-            <img src="_DSC8235.jpg" alt="">
-            <img src="_DSC9920.jpg" alt="">
-            <img src="_MG_1121_1.jpg" alt="">
-            <img src="_MG_1357" alt="">
-            <img src="_MG_1420_2.jpg" alt="">
-            <img src="_MG_2995.jpg" alt="">
+            <img src="DSC6696.jpg" alt="">
+            <img src="DSC8090.jpg" alt="">
+            <img src="DSC8235.jpg" alt="">
+            <img src="DSC9920.jpg" alt="">
+            <img src="MG_1121_1.jpg" alt="">
+            <img src="MG_1357" alt="">
+            <img src="MG_1420_2.jpg" alt="">
+            <img src="MG_2995.jpg" alt="">
         </div>
     </main>
     
